# beamtest_hallc_decoder

./: .gitignore  CMakeLists.txt  README.md  cook_data.sh  install.csh  install.sh  install_xinzhan.csh  instructions.txt  rootlogon.C  setup.csh  setup.sh  setup_rh8.sh  setup_xinzhan.csh
CreateLevel1Tree/: CreateLevel1Tree_jx.C  DoLevel1Tree.C  DoLevel1Tree_cosmic1.C  DoLevel1Tree_jx.C  DoLevel1Tree_tracking.C  DoPedestal.C  FindTriggerPeak.C  GEM_Cluster_Matching.C  GravityWeight.h  PedNPeak_highrate.h  ReadDatabase.C  ReadDatabase.h  ReadEvTree.C  ReadEvTree.h  ReadEvTree_cosmic1.C  ReadEvTree_cosmic1.h  ReadEvTree_cosmic2.C  ReadEvTree_cosmic2.h  ReadEvTree_cosmic4.C  ReadEvTree_cosmic4.h  ReadEvTree_highrate.C  ReadEvTree_highrate.h  ReadEvTree_highrate_dev.C  ReadEvTree_highrate_jx.C  ReadEvTree_highrate_v0.C  ReadEvTree_old_tracking.C  ReadEvTree_old_tracking.h  ReadEvTree_tracking.C  ReadEvTree_tracking.h  ReadEvTree_v1.0.C  ReadEvTree_v1.1.C  plotGEM.C  plot_level1.C  plot_level1_82deg.C  run.C  run_cosmic2.C  run_cosmic4.C  run_highrate_jx.C  run_old_tracking.C  run_tracking.C  (+2 more)
alignment/: tracks.txt
cmake/: os.cmake
config/: epics_map.txt  gem.conf  gem.conf_20m  gem.conf_30m  gem.conf_highrate  gem.conf_highrate2  gem_tracking.conf  histo.conf
database/: FADCPeak.txt  FADCPedestal.txt  channels_layout.json  lappd_raw_dist.json  lappd_tcuts_dist.json  mapmt_raw_dist.json  mapmt_tcuts_dist.json
database/gem_database/: CommonModeRange_3036.txt  CommonModeRange_3252.txt  CommonModeRange_3320.txt  CommonModeRange_3358.txt  CommonModeRange_3376.txt  CommonModeRange_4126.txt  CommonModeRange_4127.txt  CommonModeRange_4128.txt  CommonModeRange_4132.txt  CommonModeRange_4133.txt  CommonModeRange_4199.txt  CommonModeRange_4687.txt  gem_map_hallc.txt  gem_map_hallc_4gems.txt  gem_map_hallc_upto3683.txt  plot_pedestal_cpp.d  plot_pedestal_v2.cpp
database/modules/: lappd_module.json  mapmt_maroc_bench_20200903.json  mapmt_module.json  mapmt_module_cosmic1.json  mapmt_module_cosmic2.json  mapmt_module_cosmic2_ssp.json  mapmt_module_cosmic4.json  mapmt_module_highrate.json  module_fadc_gem_maroc_20221220.json
epics/: CMakeLists.txt
epics/include/: EPICSystem.h
epics/src/: EPICSystem.cpp
fadc/: CMakeLists.txt
fadc/decoder/: CMakeLists.txt  Fadc250Data.h  Fadc250Decoder.cpp  WfAnalyzer.cpp  WfAnalyzer.h  WfRootGraph.h  fdec_LinkDef.h
fadc/ssp/: CMakeLists.txt  SSPDecoder.cpp  SSPDecoder.h
gem/: CMakeLists.txt
gem/decoder/: CMakeLists.txt
gem/decoder/include/: sspApvdec.h
gem/decoder/src/: MPDSSPRawEventDecoder.cpp
gem/gem_ana/: CMakeLists.txt
gem/gem_ana/include/: GEMAPV.h  GEMDataHandler.h  GEMPlane.h  GEMStruct.h  GEMSystem.h  hardcode.h
gem/gem_ana/src/: GEMAPV.cpp  GEMDataHandler.cpp  GEMPlane.cpp  GEMRootClusterTree.cpp  GEMRootHitTree.cpp  GEMSystem.cpp
gem/gem_gui/: CMakeLists.txt
include/: ConfigValue.h  EvChannel.h  EvStruct.h  Fadc250Decoder.h  RolStruct.h  TiDecoder.h
maroc/: CMakeLists.txt  marocDecoder.cpp  marocDecoder.h
scripts/: .gitignore  README  draw_events.py  lappd_neighbor_cuts.py  plot_dist.py  plot_sum.py  plot_utils.py  signal_timing_cuts.py  sum_compare.py  trigger_timing_cuts.py
scripts/root/: dataframe_analysis.C  draw_events.cxx  draw_events_wrapper.py  test_wfanalyzer.cxx
src/: CMakeLists.txt  ReadDatabase.h  analyze.cpp  analyze.cpp_original  analyze_no_tracking.cpp  analyze_tracking.cpp  epics_tree_struct.h  gem_tree_struct.h  read_modules.h
ti/decoder/: CMakeLists.txt  TiDecoder.cpp  TiDecoder.h
tools/: CMakeLists.txt  et_feeder.cpp  evchan_test.cpp
tracking/: CMakeLists.txt  EventWrapper.cpp  EventWrapper.h  GEMModule.cpp  GEMModule.h  HCTracking.cpp  HCTracking.h  MPDModule.cxx  MPDModule.h  MPDModuleVMEv4.cxx  MPDModuleVMEv4.h  backuplib_cmake_CMakeLists.txt  test.cpp
tracking/Database/: CMakeLists.txt  Database.h  SConscript.py  Textvars.cxx
tracking/gemped/: CommonModeRange_4199.txt_db_format  CommonModeRange_4687.txt_db_format
tracking/ha_analyzer/: CodaDecoder.cxx  CodaDecoder.h  DAQconfig.cxx  DAQconfig.h  Module.cxx  Module.h  THaBenchmark.h  THaCrateMap.cxx  THaCrateMap.h  THaEvData.cxx  THaEvData.h  THaSlotData.cxx  THaSlotData.h  THaUsrstrutils.cxx  THaUsrstrutils.h  VmeModule.cxx  VmeModule.h
tracking/tracking_config/: db_bb.gem.dat_bigbite  db_bb.gem.dat_xb
tracking_dev/include/: AbstractDetector.h  CoordSystem.h  Detector2DItem.h  Tracking.h  TrackingDataHandler.h  TrackingUtility.h  Viewer.h  tracking_struct.h
tracking_dev/src/: AbstractDetector.cpp  Detector2DItem.cpp  Detector2DView.cpp  Tracking.cpp  TrackingDataHandler.cpp  TrackingUtility.cpp  Viewer.cpp  tracking_struct.cpp
